make my profile prettier

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>Hello, I'm Yannik 😎</h1>
         <img src="images/profilepic.jpg" class="img-circle" width="100px" alt="Yannik Grabow">
         <p>
-          I love coding (obviously), traveling and surfing. Backend was better :(
+          I love coding (obviously), traveling and surfing. Looking forward to some amazing projects with Le Wagon!
         </p>
         <a href="https://www.google.com/search?q=yannik+grabow&rlz=1C5CHFA_enDE702DE702&oq=yannik+grabow&aqs=chrome.0.35i39j46i10i457j0i10l2j0j69i61j69i60j69i61.1732j0j9&sourceid=chrome&ie=UTF-8" target="_blank" class="btn-blue">Google me!</a>
       </div>
